Edit dashboard functions

--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,10 @@
       href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap"
+    />
   </head>
   <body>
     <noscript>
